chore: lots of code cleanup